# pycades-build

./: .gitmodules  CMakeLists.txt  Makefile  noxfile.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
patches/: 001-move-version-define-and-rename-lib.patch
src/pycades/: __init__.py
tests/: requirements.txt  test_dummy.py
tests/certs/: test.crl
tests/certs/cprocsp/dsrf/db2/: kis_1
tests/certs/cprocsp/keys/root/d4092567.000/: header.key  masks.key  masks2.key  name.key  primary.key  primary2.key
tests/certs/cprocsp/keys/root/e0a27408.000/: header.key  masks.key  masks2.key  name.key  primary.key  primary2.key
tests/certs/cprocsp/users/root/: local.ini
tests/certs/cprocsp/users/root/stores/: ca.sto  my.sto  root.sto
tests/certs/etc/opt/cprocsp/: config64.ini
tests/certs/etc/opt/cprocsp/apparmor.d/: cryptopro.csp
tests/certs/etc/opt/cprocsp/apparmor.d/abstractions/: cryptopro.csp
tests/etc/opt/cprocsp/: license.ini  release  stunnel.conf
tests/etc/opt/cprocsp/apparmor.d/local/: cryptopro.csp
